--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,8 @@
     
     <router-outlet>
       <!-- <app-multiplicacion></app-multiplicacion> -->
-      <app-distancia></app-distancia>
+      <!-- <app-distancia></app-distancia> -->
+      <app-zodiaco></app-zodiaco>
     </router-outlet>
   </div>
 </div>
