--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
-<div class="container">
+<div class="">
   <div class="row">
     <!-- <h1>Hola mundo</h1> -->
     
-    <router-outlet>
       <!-- <app-multiplicacion></app-multiplicacion> -->
       <!-- <app-distancia></app-distancia> -->
-      <app-zodiaco></app-zodiaco>
-    </router-outlet>
+      <!-- <app-zodiaco></app-zodiaco>-->
+    <app-navbar></app-navbar>
+    <router-outlet></router-outlet>
   </div>
-</div>
+</div> 
