--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,5 @@
-<div class="">
-  <div class="row">
-    <!-- <h1>Hola mundo</h1> -->
-    
-      <!-- <app-multiplicacion></app-multiplicacion> -->
-      <!-- <app-distancia></app-distancia> -->
-      <!-- <app-zodiaco></app-zodiaco>-->
-    <app-navbar></app-navbar>
+<app-navbar></app-navbar>
+    <app-temh/>
+    <hr>
+    <app-temp></app-temp>
     <router-outlet></router-outlet>
-  </div>
-</div> 
