--- a/src/app/formularios/distancia/distancia.component.html
+++ b/src/app/formularios/distancia/distancia.component.html
@@ -1,11 +1,8 @@
-<div class="container">
+<!-- <div class="container">
     <div class="row">
         <h1 class="mt-5">Distancia entre <span class="bg-info">dos puntos</span></h1>
-        <!-- nombre propiedad de la definición de clase, ese mismo nombre se debe de asignar en el form -->
         <form [formGroup]="formulario">
             <div class="mb-3 mt-3">
-                <!-- ya no usamos el ngModel, sino con el formControlName, 
-                vinculamos la variable aqui (la que esta dentro de new FormGroup, la clase del ts)-->
                 <label for="numero x1" class="form-label">
                     Ingresa el valor <span class="fw-bold">X1</span>
                 </label>
@@ -31,4 +28,31 @@
             </div>
         </form>
     </div>
-</div>
+</div> -->
+<form class="max-w-sm mx-auto" [formGroup]="formulario">
+  <h1 class="inline-block mb-2 text-3xl font-extrabold tracking-tight text-gray-900 dark:text-white">Distancia entre dos puntos</h1>
+  <div class="mt-5"></div>
+  <div class="mb-5">
+    <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Ingresa el valor X1</label>
+    <input type="number" id="numerox1" class="shadow-xs bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-xs-light"
+    formControlName="numerox1" required />
+  </div>
+  <div class="mb-5">
+    <label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Ingresa el valor Y1</label>
+    <input type="number" id="numeroy1" class="shadow-xs bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-xs-light" 
+    formControlName="numeroy1" required />
+  </div>
+  <div class="mb-5">
+    <label for="repeat-password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Ingresa el valor X2</label>
+    <input type="number" id="numerox2" class="shadow-xs bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-xs-light" 
+    formControlName="numerox2" required />
+  </div>
+  <div class="mb-5">
+    <label for="repeat-password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Ingresa el valor Y2</label>
+    <input type="number" id="numeroy2" class="shadow-xs bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-xs-light" 
+    formControlName="numeroy2" required />
+  </div>
+  <button type="submit" class="text-white bg-gradient-to-r from-purple-500 to-pink-500 hover:bg-gradient-to-l focus:ring-4 focus:outline-none focus:ring-purple-200 dark:focus:ring-purple-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2" (click)="calcularDistancia()">Multiplicar</button>
+    <br>
+    <p class="text-blue-600 mt-6">Resultado: {{resultadoFinal}}</p>
+</form>
