--- a/src/app/formularios/multiplicacion/multiplicacion.component.html
+++ b/src/app/formularios/multiplicacion/multiplicacion.component.html
@@ -1,13 +1,10 @@
 <!-- <p>multiplicacion works!</p> -->
 <!-- <p>distancia works!</p> -->
-<div class="container">
+<!-- <div class="container">
     <div class="row">
         <h1 class="mt-3">Multiplica Números</h1>
-        <!-- nombre propiedad de la definición de clase, ese mismo nombre se debe de asignar en el form -->
         <form [formGroup]="formulario">
             <div class="mb-3 mt-3">
-                <!-- ya no usamos el ngModel, sino con el formControlName, 
-                vinculamos la variable aqui (la que esta dentro de new FormGroup, la clase del ts)-->
                 <label for="numero 1" class="form-label">
                     Numero 1
                 </label>
@@ -22,4 +19,23 @@
             </div>
         </form>
     </div>
-</div>
+</div> -->
+
+
+
+<form class="max-w-sm mx-auto" [formGroup]="formulario">
+  <h1 class="inline-block mb-2 text-3xl font-extrabold tracking-tight text-gray-900 dark:text-white">Multiplicacion</h1>
+  <div class="mt-5"></div>
+  <div class="mb-5">
+    <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Número 1</label>
+    <input formControlName="numero1" type="number" id="numero1" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required />
+  </div>
+  <div class="mb-5">
+    <label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Número 2</label>
+    <input formControlName="numero2" type="number" id="numero2" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required />
+  </div>
+  <button type="submit" class="text-white bg-gradient-to-r from-purple-500 to-pink-500 hover:bg-gradient-to-l focus:ring-4 focus:outline-none focus:ring-purple-200 dark:focus:ring-purple-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2" (click)="multiplicarNumeros()">Multiplicar</button>
+  <p class="text-blue-600 mt-6">Resultado: {{resultado}}</p>
+</form>
+
+
