--- a/src/app/formularios/zodiaco/zodiaco.component.html
+++ b/src/app/formularios/zodiaco/zodiaco.component.html
@@ -1,8 +1,8 @@
 <!-- <p>zodiaco works!</p> -->
-<div class="container">
+<!-- <div class="container">
     <div class="row">
         <h3 class="mt-5">Datos <span class="bg-info">personales</span></h3>
-        <form [formGroup]="formulario"><!--  -->
+        <form [formGroup]="formulario">
             <div class="row">
                 <div class="col-lg-6">
                     <label for="nombre" class="form-label mt-2">
@@ -58,9 +58,7 @@
                         </label>
                     </div>
 
-                    <button class="btn btn-dark mt-4" (click)="cargarInformacion()">Imprimir</button> <!-- " -->
-                    <!-- <h3 class="mt-3">Resultado:</h3> --> <!-- {{resultadoFinal}} -->
-
+                    <button class="btn btn-dark mt-4" (click)="cargarInformacion()">Imprimir</button>
                 </div>
 
                 <div class="col-lg-6">
@@ -70,10 +68,59 @@
                         <h3>Tu signo zodiacal es...</h3><br>
                         <h3><span class="fw-bold">{{signoZfinal}}</span></h3><br>
                         <img [src]="imagenSignoFinal" class="mt-2" style="width: 150px; height:auto;">
-                        <!-- <p class="mt-3">Por cierto, tu genero es: {{sexo}}</p> -->
                     </div>
                 </div>
             </div>
         </form>
     </div>
-</div>
+</div> -->
+
+
+<form class="max-w-sm mx-auto" [formGroup]="formulario">
+    <h1 class="inline-block mb-2 text-3xl font-extrabold tracking-tight text-gray-900 dark:text-white">Zodiaco Chino</h1>
+    <div class="mt-5"></div>
+  <div class="mb-5">
+    <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Nombre</label>
+    <input formControlName="nombre" type="text" id="nombre" class="shadow-xs bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-xs-light" required />
+  </div>
+  <div class="mb-5">
+    <label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Apellido Paterno</label>
+    <input formControlName="apaterno" type="text" id="apaterno" class="shadow-xs bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-xs-light" required />
+  </div>
+  <div class="mb-5">
+    <label for="repeat-password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Apellido Materno</label>
+    <input formControlName="amaterno" type="text" id="amaterno" class="shadow-xs bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-xs-light" required />
+  </div>
+
+  <div class="mb-5">
+    <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Dia</label>
+    <input formControlName="diaNacimiento" type="number" id="diaNacimiento" class="shadow-xs bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-xs-light" required />
+  </div>
+  <div class="mb-5">
+    <label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Mes</label>
+    <input formControlName="mesNacimiento" type="number" id="mesNacimiento" class="shadow-xs bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-xs-light" required />
+  </div>
+  <div class="mb-5">
+    <label for="repeat-password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Año</label>
+    <input formControlName="anioNacimiento" type="number" id="anioNacimiento" class="shadow-xs bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-xs-light" required />
+  </div>
+
+  
+    <div class="flex items-center mb-4">
+        <input id="default-radio-1" type="radio" name="sexo" id="masculino" value="masculino" formControlName="genero" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+        <label for="default-radio-1" class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">Masculino</label>
+    </div>
+    <div class="flex items-center">
+        <input id="default-radio-2" type="radio" name="sexo" id="femenino" value="femenino" formControlName="genero" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+        <label for="default-radio-2" class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">Femenino</label>
+    </div>
+<div class="mt-6"></div>
+  <button type="submit" class="text-white bg-gradient-to-r from-purple-500 to-pink-500 hover:bg-gradient-to-l focus:ring-4 focus:outline-none focus:ring-purple-200 dark:focus:ring-purple-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2" 
+  (click)="cargarInformacion()">Imprimir</button>
+  <br />
+  <p class="text-blue-600 mt-6">Hola {{nombreCompleto}}</p>
+  <p class="text-blue-600 mt-6">Tienes {{edadFinal}}</p>
+  <p class="text-blue-600 mt-6">Tu signo zodiacal es {{signoZfinal}}</p>
+  <img [src]="imagenSignoFinal" class="mt-2" style="width: 150px; height:auto;">
+  <div class="mt-5"></div>
+</form>
